# awesome-opencode-skills

./: .gitignore  CONTRIBUTING.md  MIGRATION.md  OPENCODE_SKILLS.md  QUICKSTART.md  README.md  SKILL_INTERACTIONS.md  TESTING.md
.opencode/: skills.json
brand-guidelines/: SKILL.md
canvas-design/: SKILL.md
code-security-auditor/: SKILL.md
code-security-auditor/references/: package_checks.md
competitive-ads-extractor/: SKILL.md
content-research-writer/: SKILL.md
developer-growth-analysis/: SKILL.md
domain-name-brainstormer/: SKILL.md
file-organizer/: SKILL.md
image-enhancer/: SKILL.md
internal-comms/: SKILL.md
invoice-organizer/: SKILL.md
meeting-insights-analyzer/: SKILL.md
opencode-skills-mcp-server/: README.md  SUMMARY.md  pyproject.toml  setup.sh
opencode-skills-mcp-server-ts/: README.md  package.json  skills_metadata.json  tsconfig.json
opencode-skills-mcp-server-ts/src/: config.ts  index.ts  server.ts  skill-manager.ts
opencode-skills-mcp-server/src/opencode_skills_mcp/: Guide.md  __init__.py  config.py  logging_config.py  models.py  server.py  skill_manager.py
raffle-winner-picker/: SKILL.md
scripts/: install_opencode_skills.sh
skill-share/: SKILL.md
staff-engineer-review/: SKILL.md
template-skill/: SKILL.md
video-downloader/: SKILL.md
