[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "opencode-skills-mcp"
version = "1.0.0"
description = "MCP server for managing OpenCode skills"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "opencode", email = "opencode@example.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "mcp>=0.1.0",
    "pydantic>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/sst/awesome-opencode-skills"
Repository = "https://github.com/sst/awesome-opencode-skills"

[tool.setuptools]
packages = ["src"]

[tool.setuptools.package-data]
"opencode_skills_mcp" = ["skills_metadata.json"]
